Arreglo al miner de miranda y getters en blockchain